# splunk-dashboard-studio-python

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ci/npm-validator/: README.md  build-schema.cjs  run.py  validate.cjs
.github/workflows/: ci.yml  release.yml  visual-regression.yml
benchmarks/: benchmark_validation.py
docs/: architecture.md  compatibility.md  example-catalog.md  gallery.md  operational-security.md  skills.md  source-templates.md  visual-regression.md
docs/images/dashboard-samples/: manifest.json
examples/: README.md  basic.py
examples/catalog/api_gateway_overview/: README.md  builder.py  dashboard.json  manifest.json
examples/catalog/batch_cron_reliability/: README.md  builder.py  dashboard.json  manifest.json
examples/catalog/business_journey_slo/: README.md  builder.py  dashboard.json  manifest.json
examples/catalog/cicd_delivery_health/: README.md  builder.py  dashboard.json  manifest.json
examples/catalog/ec2_host_capacity/: README.md  builder.py  dashboard.json  manifest.json
examples/catalog/kubernetes_workload_health/: README.md  builder.py  dashboard.json  manifest.json
examples/source_templates/: README.md  rcastley_splunk_health.py  rcastley_splunk_health_portable.py
integration/splunk-visual/: README.md  compose.source-template.yaml  compose.yaml  defaults.yml  fixtures.json  images.json  package-lock.json  package.json  playwright.config.ts  run.sh  source-lock.json
scripts/: check_corpus.py  check_distribution.py  check_engine_locks.py  check_examples.py  release_evidence.py  sync_dashboard_samples.py  sync_source_templates.py
splunk_dashboard_studio/: __init__.py  __main__.py  _version.py  catalog.py  cli.py  codec.py  contracts.py  corpus.py  dos.py  generation.py  graph.py  issues.py  models.py  profiles.py  schema.py  source_templates.py  spl.py  validation.py  version.py
splunk_dashboard_studio/template_data/: NOTICE.md  manifest.json  rcastley_splunk_health.json  rcastley_splunk_health_portable.json
tests/: conftest.py  test_catalog.py  test_codec.py  test_contracts.py  test_dashboard_samples.py  test_distribution_guard.py  test_dos_spl.py  test_generation.py  test_graph.py  test_properties.py  test_release_evidence.py  test_schema_corpus_cli.py  test_source_templates.py  test_validation.py  test_versions_profiles.py  test_visual_harness.py
(+32 files in other folders)
