[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "splunk-dashboard-studio-python"
version = "0.2.0"
description = "Deterministic, version-aware Splunk Enterprise Dashboard Studio tooling for Python"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Kmosoti" }]
keywords = ["splunk", "dashboard-studio", "pydantic", "spl", "validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.12.0,<3",
]

[project.urls]
Homepage = "https://github.com/kmosoti/splunk-dashboard-studio-python"
Repository = "https://github.com/kmosoti/splunk-dashboard-studio-python"
Issues = "https://github.com/kmosoti/splunk-dashboard-studio-python/issues"

[project.scripts]
splunk-studio = "splunk_dashboard_studio.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.140",
  "mypy>=1.17",
  "pytest>=8.4",
  "pytest-cov>=7.0",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["splunk_dashboard_studio"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/docs",
  "/examples",
  "/pyproject.toml",
  "/scripts",
  "/splunk_dashboard_studio",
  "/tests",
]
exclude = [
  "/.github",
  "/benchmarks",
  "/node_modules",
  "**/*.js",
  "**/*.cjs",
  "**/package.json",
  "**/package-lock.json",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["splunk_dashboard_studio"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["splunk_dashboard_studio"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
